@@ -4,6 +4,11 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- Redefine portal_actions items to not override Plone's original login and
+  logout actions but create new actions. This satisfies the use-case of 
+  potentially using Plone's original actions in cases of multiple souces of
+  authentication.
+  [davidjb]
 - Control panel cancel button now redirects to overview.
   [davidjb]
 - Added descriptions to control panel fields.
